@@ -2,6 +2,9 @@
 
 # note this works for both a.out and ELF executables
 
+PATH=/usr/bin:/usr/ccs/bin:/usr/sbin:/sbin
+export PATH
+
 ulimit -c 0
 
 filelist=`sed "s/['\"]/\\\&/g"`
